--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="about">
                     <h2>KETAHANANAN PANGAN</h2>
                     <div class="diskripsi">
-                        <img src="agriculture.png" alt="agriculture" width="200">
+                        <img src="img/agriculture.png" alt="agriculture" width="200">
                         <p>Pangan merupakan segala sesuatu yang berasal dari sumber hayati produk pertanian, perkebunan, kehutanan, perikanan, peternakan, perairan, dan air, baik yang diolah maupun tidak diolah yang diperuntukkan 
                             sebagai makanan atau minuman bagi konsumsi manusia, termasuk bahan tambahan pangan, bahan baku pangan, dan bahan lainnya yang digunakan dalam proses penyiapan, pengolahan, dan/atau pembuatan makanan atau minuman.  </p>
                         <p>Pengertian ketahanan pangan, tidak lepas dari UU No. 18/2012 tentang Pangan. Disebutkan dalam UU tersebut bahwa Ketahanan Pangan adalah “kondisi terpenuhinya Pangan bagi negara sampai dengan perseorangan, 
@@ -40,7 +40,7 @@
                     <h2></h2>
                     <h3>Word Cloud Ketahanan Pangan</h3>
                     <h6>(Data Twitter)</h6>
-                    <img src="wordcloud.png" alt="wordcloud" width="500">
+                    <img src="img/wordcloud.png" alt="wordcloud" width="500">
 
             </div>
             <div class="foot">
